# Fault_Detection

./: README.md  main.py  pyproject.toml  test.db
static/: login.html
